2004/02/11 20:25 (+0100) kaffeetisch

	* examples/cellrenderer_date.pl: Adjust the positioning code to
	work correctly with scrolled tree views.

	* t/GtkUIManager.t: Test insert_action_group, get_action_groups,
	remove_action_group, get_accel_group, add_ui_from_string,
	add_ui_from_string, add_ui, remove_ui, ensure_update, get_ui,
	get_widget, get_toplevels, and get_action.

2004/02/11 00:37 (+0100) kaffeetisch

	* t/GtkComboBox.t: Test new, new_with_model, set_wrap_width,
	set_row_span_column, set_column_span_column, and [sg]et_active.

	* t/GtkFileChooser.t: Test add_shortcut_folder(_uri)?,
	list_shortcut_folders(_uris)?, and remove_shortcut_folder(_uri)?.

	* t/GtkRadioToolButton.t: Implement.

	* t/GtkAction.t
	* xs/GtkAction.xs: Add and test (is|get)_sensitive and
	(is|get)_visible.

	* t/GtkActionGroup.t
	* xs/GtkActionGroup.xs: Add and test [sg]et_sensitive,
	[sg]et_visible, and add_action_with_accel.

	* xs/GnomeIconTheme.xs: Allow undef for the context argument of
	list_icons.

2004/02/10 01:45 (-0500) muppetman

	A copyright.pod
	A doctypes
	M MANIFEST
	  add copyright.pod and doctypes

	* Makefile.PL: require ExtUtils::Depends 0.2; use
	Glib::MakeHelper->postamble_docs_full(); use and install doctypes,
	to add mappings for unregistered types.

	* README: update the ExtUtils::Depends and ExtUtils::PkgConfig
	requirements.

	* t/GtkCellRenderer.t: 'focused' was not a valid CellRendererState
	value until 2.2.0

	* xs/Gtk2.xs, xs/GtkTreeModel.xs, xs/GtkTreeStore.xs: pod updates

2004/02/09 01:32 (+0100) kaffeetisch

	* t/GtkTreeModelSort.t
	* xs/GtkTreeModelSort.xs: Bind and test clear_cache.

	* t/GtkTreeStore.t
	* xs/GtkTreeStore.xs: Alias set_value to set.  Test it.

2004/02/08 22:28 (+0100) kaffeetisch

	* MANIFEST
	A t/GtkCellRendererPixbuf.t
	A t/GtkCellRendererText.t
	A t/GtkCellRendererToggle.t: New tests.

	* t/GtkCellRenderer.t: Test get_size, render, activate,
	start_editing, and [sg]et_fixed_size.

2004/02/09 01:24 (-0500) muppetman
